ui完成百分之九十

--- a/小程序/AppOT/app.json
+++ b/小程序/AppOT/app.json
@@ -2,11 +2,10 @@
   "pages": [
     "pages/index/index",
     "pages/mine/index",
-    "pages/type1/index",
-    "pages/type2/index",
-    "pages/type3/index",
-    "pages/type4/index",
-    "pages/order1/index",
+    "pages/task_detail/index",  
+    "pages/task_hall/index",
+    "pages/upload_task/index",
+    "pages/history_task/index",
     "pages/userinfo/index",
     "pages/suggest/index",
     "pages/admin/admin_first",
