--- a/小程序/AppOT/project.config.json
+++ b/小程序/AppOT/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -12,7 +12,7 @@
 		"nodeModules": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "1.9.90",
+	"libVersion": "2.2.0",
 	"appid": "wx842944599fa4c887",
 	"projectname": "%E5%BE%AE%E4%BF%A1%E6%9C%8B%E5%8F%8B%E5%9C%88%E8%B5%9A%E9%92%B1",
 	"isGameTourist": false,
@@ -34,7 +34,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 10,
 			"list": [
 				{
 					"id": -1,
@@ -99,8 +99,7 @@
 				{
 					"id": -1,
 					"name": "提现",
-					"pathName": "pages/encash/index",
-					"query": ""
+					"pathName": "pages/encash/index"
 				}
 			]
 		}
