--- a/接口/NetOT/pom.xml
+++ b/接口/NetOT/pom.xml
@@ -13,6 +13,16 @@
     <build>
         <!-- 产生的构件的文件名，默认值是${artifactId}-${version}。 -->
         <finalName>NetOT</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <!--<build>-->
@@ -347,6 +357,16 @@
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>repository.org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-spi-commons</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.7.RELEASE</version>
         </dependency>
         <!-- GENERAL UTILS end -->
     </dependencies>
