表关系建立完成

--- a/接口/NetOT/pom.xml
+++ b/接口/NetOT/pom.xml
@@ -26,28 +26,28 @@
     </build>
 
     <!--<build>-->
-        <!--<plugins>-->
-            <!--&lt;!&ndash; war打包插件, 设定war包名称不带版本号 &ndash;&gt;-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-war-plugin</artifactId>-->
-                <!--<version>2.5</version>-->
-                <!--<configuration>-->
-                    <!--<warName>${project.artifactId}</warName>-->
-                    <!--<webResources>-->
-                        <!--<resource>-->
-                            <!--<directory>src/main/webapp</directory>-->
-                            <!--<includes>-->
-                                <!--<include>*.*</include>-->
-                                <!--<include>**/*.*</include>-->
-                            <!--</includes>-->
-                            <!--<filtering>true</filtering>-->
-                        <!--</resource>-->
-                    <!--</webResources>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
+    <!--<plugins>-->
+    <!--&lt;!&ndash; war打包插件, 设定war包名称不带版本号 &ndash;&gt;-->
+    <!--<plugin>-->
+    <!--<groupId>org.apache.maven.plugins</groupId>-->
+    <!--<artifactId>maven-war-plugin</artifactId>-->
+    <!--<version>2.5</version>-->
+    <!--<configuration>-->
+    <!--<warName>${project.artifactId}</warName>-->
+    <!--<webResources>-->
+    <!--<resource>-->
+    <!--<directory>src/main/webapp</directory>-->
+    <!--<includes>-->
+    <!--<include>*.*</include>-->
+    <!--<include>**/*.*</include>-->
+    <!--</includes>-->
+    <!--<filtering>true</filtering>-->
+    <!--</resource>-->
+    <!--</webResources>-->
+    <!--</configuration>-->
+    <!--</plugin>-->
 
-        <!--</plugins>-->
+    <!--</plugins>-->
     <!--</build>-->
 
     <properties>
@@ -369,8 +369,15 @@
             <version>4.3.7.RELEASE</version>
         </dependency>
         <!-- GENERAL UTILS end -->
-    </dependencies>
 
+        <!-- //图片压缩 https://github.com/coobird/thumbnailator -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
