--- a/接口/NetOT/pom.xml
+++ b/接口/NetOT/pom.xml
@@ -377,6 +377,19 @@
             <version>0.4.8</version>
         </dependency>
 
+
+        <!-- jwt -->
+        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.28</version>
+        </dependency>
     </dependencies>
 
 
