--- a/小程序/AppOT/app.json
+++ b/小程序/AppOT/app.json
@@ -16,7 +16,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#e9e9e9",
+    "navigationBarBackgroundColor": "#fafafa",
     "navigationBarTitleText": "demo",
     "navigationBarTextStyle": "black"
   },
